Your commit message

--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
   </header>
 
   <!-- Hero Section -->
-  <!-- <section class="hero">
+  <section class="hero">
     <div class="swiper heroSwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide hero-slide" style="background-image:url('https://picsum.photos/1200/400?random=1');">
+        <div class="swiper-slide hero-slide" style="background-image:url('https://images.unsplash.com/photo-1756517313520-c6c25364ce65?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
           <div class="hero-text">
             <h2>Exclusive Deals!</h2>
-            <p>Up to 50% off on Electronics</p>
-            <button>Shop Now</button>
+            <p>Up to 50% off on Pixel 10</p>
+            <!-- <button>Shop Now</button> -->
           </div>
         </div>
-        <div class="swiper-slide hero-slide" style="background-image:url('https://picsum.photos/1200/400?random=2');">
+        <div class="swiper-slide hero-slide" style="background-image:url('https://images.unsplash.com/photo-1757709608566-4b9fd41a7af5?q=80&w=2064&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
           <div class="hero-text">
-            <h2>New Arrivals</h2>
-            <p>Check out the latest trends</p>
-            <button>Explore</button>
+            <h2>Exclusive Deals!</h2>
+            <p>Up to 50% off on iPhone 17</p>
+            <!-- <button>Explore</button> -->
           </div>
         </div>
-        <div class="swiper-slide hero-slide" style="background-image:url('https://picsum.photos/1200/400?random=3');">
+        <div class="swiper-slide hero-slide" style="background-image:url('https://images.unsplash.com/photo-1626466368754-f1c67d680345?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fG5pa2UlMjBzaG9lc3xlbnwwfHwwfHx8MA%3D%3D');">
           <div class="hero-text">
-            <h2>Summer Collection</h2>
-            <p>Stylish & Comfortable</p>
-            <button>Shop Now</button>
+             <h2>Exclusive Deals!</h2>
+            <p>Up to 50% off on Nike</p>
+            <!-- <button>Shop Now</button> -->
           </div>
         </div>
       </div>
@@ -80,20 +80,7 @@
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
     </div>
-  </section> -->
-
-  <!-- Categories -->
-  <!-- <section id="categories" class="categories">
-    <h2>Shop by Category</h2>
-    <div class="category-grid">
-      <div class="category-card">Electronics</div>
-      <div class="category-card">Fashion</div>
-      <div class="category-card">Sports</div>
-      <div class="category-card">Home & Kitchen</div>
-      <div class="category-card">Toys</div>
-      <div class="category-card">Books</div>
-    </div>
-  </section> -->
+  </section>
 
   <!-- Product Search -->
   <section class="product-search">
@@ -136,10 +123,10 @@
           </a>
           <!-- Actions -->
           <div class="actions">
-            <button class="add-cart" data-id="smartwatch1" data-name="Smart Watch" data-price="120"
+            <button class="add-cart" data-id="smartwatch" data-name="Smart Watch" data-price="2000 "
               data-image="https://images.unsplash.com/photo-1637160151663-a410315e4e75?q=80&w=774&auto=format&fit=crop">Add
               to Cart</button>
-            <button class="buy-now" data-id="smartwatch1" data-name="Smart Watch" data-price="120"
+            <button class="buy-now" data-id="smartwatch" data-name="Smart Watch" data-price="2000"
               data-image="https://images.unsplash.com/photo-1637160151663-a410315e4e75?q=80&w=774&auto=format&fit=crop">Buy
               Now</button>
           </div>
@@ -157,10 +144,10 @@
           </a>
            <!-- Actions -->
           <div class="actions">
-            <button class="add-cart" data-id="headphones1" data-name="headphones" data-price="120"
+            <button class="add-cart" data-id="headphones" data-name="Headphones" data-price="3999"
               data-image="https://images.unsplash.com/photo-1628202926206-c63a34b1618f?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Add
               to Cart</button>
-            <button class="buy-now" data-id="smartwatch1" data-name="Smart Watch" data-price="120"
+            <button class="buy-now" data-id="headphones" data-name="Headphones" data-price="3999"
               data-image="https://images.unsplash.com/photo-1628202926206-c63a34b1618f?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Buy
               Now</button>
           </div>
@@ -168,19 +155,19 @@
 
         <!-- Product 3 - Camera -->
         <div class="swiper-slide product-card category-filtered camera">
-          <a href="product-camera.html">
+          <a href="product-canon.html">
             <img
               src="https://images.unsplash.com/photo-1603208234872-619ffa1209cb?q=80&w=748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               alt="Camera">
-            <h3>Camera</h3>
+            <h3>Canon</h3>
             <p>₹4999</p>
           </a>
            <!-- Actions -->
           <div class="actions">
-            <button class="add-cart" data-id="camera1" data-name="camera" data-price="120"
+            <button class="add-cart" data-id="canon" data-name="Canon" data-price="4999"
               data-image="https://images.unsplash.com/photo-1603208234872-619ffa1209cb?q=80&w=748&auto=format&fit=crop">Add
               to Cart</button>
-            <button class="buy-now" data-id="smartwatch1" data-name="Smart Watch" data-price="120"
+            <button class="buy-now" data-id="canon" data-name="Canon" data-price="4999"
               data-image="https://images.unsplash.com/photo-1603208234872-619ffa1209cb?q=80&w=748&auto=format&fit=crop">Buy
               Now</button>
           </div>
@@ -188,60 +175,99 @@
 
         <!-- Product 4 - Shoes -->
         <div class="swiper-slide product-card category-filtered shoes">
-          <a href="product-sneakers.html">
+          <a href="product-puma.html">
             <img
-              src="https://plus.unsplash.com/premium_photo-1710107447132-063440229ee4?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="Sneakers">
-            <h3>Sneakers</h3>
-            <p>₹95</p>
+              src="https://images.unsplash.com/photo-1608379894453-c6b729b05596?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Puma">
+            <h3>Puma</h3>
+            <p>₹6000</p>
           </a>
           <!-- Actions -->
           <div class="actions">
-            <button class="add-cart" data-id="sneakers1" data-name="sneakers" data-price="120"
-              data-image="https://plus.unsplash.com/premium_photo-1710107447132-063440229ee4?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Add
+            <button class="add-cart" data-id="puma" data-name="Puma" data-price="6000"
+              data-image="https://images.unsplash.com/photo-1608379894453-c6b729b05596?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Add
               to Cart</button>
-            <button class="buy-now" data-id="smartwatch1" data-name="Smart Watch" data-price="120"
-              data-image="https://plus.unsplash.com/premium_photo-1710107447132-063440229ee4?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Buy
+            <button class="buy-now" data-id="puma" data-name="Puma" data-price="6000"
+              data-image="https://images.unsplash.com/photo-1608379894453-c6b729b05596?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Buy
               Now</button>
           </div>
         </div>
 
-        <!-- Product 5 - Mobile -->
+        <!-- Product 5 - iPhone -->
         <div class="swiper-slide product-card category-filtered mobile">
-          <a href="product-mobile1.html">
+          <a href="product-iphone17.html">
             <img
-              src="https://images.unsplash.com/photo-1592899677977-9c10ca588bbd?q=80&w=2913&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="https://images.unsplash.com/photo-1758784211688-ab9177d65bb3?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D"
               alt="Mobile">
-            <h3>iPhone 14</h3>
+            <h3>iPhone 17</h3>
+            <p>₹80000</p>
+          </a>
+          <!-- Actions -->
+          <div class="actions">
+            <button class="add-cart" data-id="iphone17" data-name="iPhone 17" data-price="80000"
+              data-image="https://images.unsplash.com/photo-1758784211688-ab9177d65bb3?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D">Add
+              to Cart</button>
+            <button class="buy-now" data-id="iphone17" data-name="iPhone 17" data-price="80000"
+              data-image="https://images.unsplash.com/photo-1758784211688-ab9177d65bb3?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D">Buy
+              Now</button>
+          </div>
+        </div>
+
+        <!-- Product 6 - Pixel -->
+        <div class="swiper-slide product-card category-filtered mobile">
+          <a href="product-pixel10.html">
+            <img
+              src="https://lh3.googleusercontent.com/d0RQTNwa0bQwQ3SrQFBBmiOX1k1-oWDzGBsFdoGwhC69uT5MGQZVefMBBh4r0oiWJWlPN5eJtgqa1rTuoLuZlKtQ0aUi8LJSBQ=s6000-w6000-e365-rw-v0-nu"
+              alt="Mobile">
+            <h3>Pixel 10</h3>
             <p>₹60000</p>
           </a>
           <!-- Actions -->
           <div class="actions">
-            <button class="add-cart" data-id="Mobile1" data-name="Mobile" data-price="120"
-              data-image="https://images.unsplash.com/photo-1592899677977-9c10ca588bbd?q=80&w=2913&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Add
+            <button class="add-cart" data-id="pixel10" data-name="Pixel 10" data-price="60000"
+              data-image="https://lh3.googleusercontent.com/d0RQTNwa0bQwQ3SrQFBBmiOX1k1-oWDzGBsFdoGwhC69uT5MGQZVefMBBh4r0oiWJWlPN5eJtgqa1rTuoLuZlKtQ0aUi8LJSBQ=s6000-w6000-e365-rw-v0-nu">Add
               to Cart</button>
-            <button class="buy-now" data-id="smartwatch1" data-name="Smart Watch" data-price="120"
-              data-image="https://images.unsplash.com/photo-1592899677977-9c10ca588bbd?q=80&w=2913&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Buy
+            <button class="buy-now" data-id="pixel10" data-name="Pixel 10" data-price="60000"
+              data-image="https://lh3.googleusercontent.com/d0RQTNwa0bQwQ3SrQFBBmiOX1k1-oWDzGBsFdoGwhC69uT5MGQZVefMBBh4r0oiWJWlPN5eJtgqa1rTuoLuZlKtQ0aUi8LJSBQ=s6000-w6000-e365-rw-v0-nu">Buy
               Now</button>
           </div>
         </div>
 
-        <!-- Product 6 - Mobile -->
-        <div class="swiper-slide product-card category-filtered mobile">
-          <a href="product-mobile2.html">
+        <!-- Product 7 - Shoes-1 -->
+        <div class="swiper-slide product-card category-filtered shoes">
+          <a href="product-shoes1.html">
             <img
-              src="https://images.unsplash.com/photo-1600087626014-e652e18bbff2?q=80&w=928&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="Mobile">
-            <h3>Android 15</h3>
-            <p>₹50000</p>
+              src="https://images.unsplash.com/photo-1605348532760-6753d2c43329?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Sneakers">
+            <h3>Nike</h3>
+            <p>₹9005</p>
           </a>
           <!-- Actions -->
           <div class="actions">
-            <button class="add-cart" data-id="Mobile2" data-name="Mobile" data-price="120"
-              data-image="https://images.unsplash.com/photo-1600087626014-e652e18bbff2?q=80&w=928&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Add
+            <button class="add-cart" data-id="shoes1" data-name="Nike" data-price="9005"
+              data-image="https://images.unsplash.com/photo-1605348532760-6753d2c43329?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Add
               to Cart</button>
-            <button class="buy-now" data-id="smartwatch1" data-name="Smart Watch" data-price="120"
-              data-image="https://images.unsplash.com/photo-1600087626014-e652e18bbff2?q=80&w=928&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Buy
+            <button class="buy-now" data-id="smartwatch1" data-name="Nike" data-price="9005"
+              data-image="https://plus.unsplash.com/premium_photo-1710107447132-063440229ee4?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Buy
+              Now</button>
+          </div>
+        </div>
+        <!-- Product 7 - Shoes-2 -->
+        <div class="swiper-slide product-card category-filtered shoes">
+          <a href="product-shoes2.html">
+            <img
+              src="https://images.unsplash.com/photo-1606107557195-0e29a4b5b4aa?q=80&w=928&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Nike">
+            <h3>Nike</h3>
+            <p>₹7000</p>
+          </a>
+          <!-- Actions -->
+          <div class="actions">
+            <button class="add-cart" data-id="shoes2" data-name="Nike" data-price="₹7000"
+              data-image="https://images.unsplash.com/photo-1606107557195-0e29a4b5b4aa?q=80&w=928&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Add
+              to Cart</button>
+            <button class="buy-now" data-id="shoes2" data-name="Nike" data-price="7000"
+              data-image="https://images.unsplash.com/photo-1606107557195-0e29a4b5b4aa?q=80&w=928&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">Buy
               Now</button>
           </div>
         </div>
@@ -261,7 +287,7 @@
     <h2>Hot Deals & Offers</h2>
     <div class="offer-cards">
       <div class="offer-card">
-        <h3>50% Off Electronics</h3>
+        <h3>50% Off </h3>
         <p>Limited time only!</p>
       </div>
       <div class="offer-card">
