--- a/product-iphone17.html
+++ b/product-iphone17.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Camera - Product Details</title>
   <link rel="stylesheet" href="product-style.css">
-  <script src="products-data.js"></script> <!-- Add products data -->
 </head>
 <body>
 
@@ -13,13 +12,13 @@
 
     <!-- Product Image -->
     <div class="product-image">
-      <img src="https://images.unsplash.com/photo-1603208234872-619ffa1209cb?q=80&w=748&auto=format&fit=crop" alt="Camera">
+      <img src="https://images.unsplash.com/photo-1758784211688-ab9177d65bb3?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D" alt="iPhone17">
     </div>
 
     <!-- Product Details -->
     <div class="product-details">
-      <h1>Camera</h1>
-      <p class="price">₹250</p>
+      <h1>iPhone 17</h1>
+      <p class="price">₹80000</p>
 
       <!-- Product Rating -->
       <div class="rating">
@@ -29,7 +28,7 @@
         <span data-star="4">☆</span>
         <span data-star="5">☆</span>
       </div>
- 
+
       <p class="description">
         Capture stunning photos and videos with our high-resolution Camera.
         Packed with features like fast autofocus, low-light performance, and advanced lens technology.
@@ -66,14 +65,12 @@
 
   <script>
     window.productData = {
-      id: "camera1",
-      name: "Camera",
-      price: 250,
-      image: "https://images.unsplash.com/photo-1603208234872-619ffa1209cb?q=80&w=748&auto=format&fit=crop"
+      id: "iphone17",
+      name: "iPhone 17",
+      price: 60000,
+      image: "https://images.unsplash.com/photo-1758784211688-ab9177d65bb3?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D"
     };
   </script>
   <script src="product-script.js"></script>
-  <script src="products-data.js"></script>
-<script src="script.js"></script>
 </body>
 </html>
