--- a/product-puma.html
+++ b/product-puma.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Headphones - Product Details</title>
-  <link rel="stylesheet" href="product-style.css"> <!-- ✅ external CSS for reuse -->
+  <title>Sneakers - Product Details</title>
+  <link rel="stylesheet" href="product-style.css"> <!-- ✅ shared styles -->
 </head>
 <body>
 
   <div class="product-container">
     <!-- Product Image -->
     <div class="product-image">
-      <img src="https://images.unsplash.com/photo-1628202926206-c63a34b1618f?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Headphones">
+      <img src="https://images.unsplash.com/photo-1608379894453-c6b729b05596?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Puma">
     </div>
 
     <!-- Product Details -->
     <div class="product-details">
-      <h1>Headphones</h1>
-      <p class="price">₹3999</p>
+      <h1>Puma</h1>
+      <p class="price">₹6000</p>
       <div class="rating">
         <span data-star="1">☆</span>
         <span data-star="2">☆</span>
@@ -26,8 +26,8 @@
         <span data-star="5">☆</span>
       </div>
       <p class="description">
-        Experience crystal-clear sound with our high-quality Headphones. 
-        Perfect for music lovers, gamers, and professionals who want immersive audio with all-day comfort.
+        Step out in style with our lightweight and comfortable Sneakers. 
+        Designed for everyday wear, sports, and long-lasting durability.
       </p>
       <div class="actions">
         <button class="add-cart">Add to Cart</button>
@@ -60,10 +60,10 @@
 
   <script>
   window.productData = {
-    id: "headphones",
-    name: "Headphones",
-    price: 3999,
-    image: "https://images.unsplash.com/photo-1628202926206-c63a34b1618f?q=80&w=774&auto=format&fit=crop"
+    id: "puma",
+    name: "Puma",
+    price: 6000,
+    image: "https://images.unsplash.com/photo-1608379894453-c6b729b05596?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   };
 </script>
   <script src="./product-script.js"></script>
