--- a/checkout.html
+++ b/checkout.html
@@ -53,12 +53,12 @@
     }
 
     .product-info h2 {
-      margin: 0 0 8px;
+      margin: 0 0 6px 0;
       font-size: 18px;
     }
 
     .product-info p {
-      margin: 4px 0;
+      margin: 0 0 10px 0;
       font-size: 14px;
       color: #555;
     }
