--- a/product-canon.html
+++ b/product-canon.html
@@ -3,21 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sneakers - Product Details</title>
-  <link rel="stylesheet" href="product-style.css"> <!-- ✅ shared styles -->
+  <title>Camera - Product Details</title>
+  <link rel="stylesheet" href="product-style.css">
+  <script src="products-data.js"></script> <!-- Add products data -->
 </head>
 <body>
 
   <div class="product-container">
+
     <!-- Product Image -->
     <div class="product-image">
-      <img src="https://plus.unsplash.com/premium_photo-1710107447132-063440229ee4?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Sneakers">
+      <img src="https://images.unsplash.com/photo-1603208234872-619ffa1209cb?q=80&w=748&auto=format&fit=crop" alt="Camera">
     </div>
 
     <!-- Product Details -->
     <div class="product-details">
-      <h1>Sneakers</h1>
-      <p class="price">₹95</p>
+      <h1>Canon</h1>
+      <p class="price">₹4999</p>
+
+      <!-- Product Rating -->
       <div class="rating">
         <span data-star="1">☆</span>
         <span data-star="2">☆</span>
@@ -25,10 +29,13 @@
         <span data-star="4">☆</span>
         <span data-star="5">☆</span>
       </div>
+ 
       <p class="description">
-        Step out in style with our lightweight and comfortable Sneakers. 
-        Designed for everyday wear, sports, and long-lasting durability.
+        Capture stunning photos and videos with our high-resolution Camera.
+        Packed with features like fast autofocus, low-light performance, and advanced lens technology.
       </p>
+
+      <!-- Actions -->
       <div class="actions">
         <button class="add-cart">Add to Cart</button>
         <button class="buy-now">Buy Now</button>
@@ -36,7 +43,6 @@
     </div>
   </div>
 
-  
   <!-- Reviews Section -->
   <div class="reviews-container">
     <h2>Customer Reviews</h2>
@@ -59,14 +65,15 @@
   </div>
 
   <script>
-  window.productData = {
-    id: "sneakers1",
-    name: "Sneakers",
-    price: 95,
-    image: "https://plus.unsplash.com/premium_photo-1710107447132-063440229ee4?q=80&w=774&auto=format&fit=crop"
-  };
-</script>
-  <script src="./product-script.js"></script>
-
+    window.productData = {
+      id: "canon",
+      name: "Canon",
+      price: 4999,
+      image: "https://images.unsplash.com/photo-1603208234872-619ffa1209cb?q=80&w=748&auto=format&fit=crop"
+    };
+  </script>
+  <script src="product-script.js"></script>
+  <script src="products-data.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
