--- a/product-pixel10.html
+++ b/product-pixel10.html
@@ -12,13 +12,13 @@
 
     <!-- Product Image -->
     <div class="product-image">
-      <img src="https://images.unsplash.com/photo-1592899677977-9c10ca588bbd?q=80&w=2913&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Camera">
+      <img src="https://lh3.googleusercontent.com/d0RQTNwa0bQwQ3SrQFBBmiOX1k1-oWDzGBsFdoGwhC69uT5MGQZVefMBBh4r0oiWJWlPN5eJtgqa1rTuoLuZlKtQ0aUi8LJSBQ=s6000-w6000-e365-rw-v0-nu" alt="Pixel10">
     </div>
 
     <!-- Product Details -->
     <div class="product-details">
-      <h1>Mobile</h1>
-      <p class="price">₹66000</p>
+      <h1>Pixel 10</h1>
+      <p class="price">₹60000</p>
 
       <!-- Product Rating -->
       <div class="rating">
@@ -65,10 +65,10 @@
 
   <script>
     window.productData = {
-      id: "Mobile1",
-      name: "Mobile",
-      price: 60000,
-      image: "https://images.unsplash.com/photo-1592899677977-9c10ca588bbd?q=80&w=2913&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      id: "pixel10",
+      name: "Pixel 10",
+      price: 50000,
+      image: "https://lh3.googleusercontent.com/d0RQTNwa0bQwQ3SrQFBBmiOX1k1-oWDzGBsFdoGwhC69uT5MGQZVefMBBh4r0oiWJWlPN5eJtgqa1rTuoLuZlKtQ0aUi8LJSBQ=s6000-w6000-e365-rw-v0-nu"
     };
   </script>
   <script src="product-script.js"></script>
