--- a/product-smartwatch.html
+++ b/product-smartwatch.html
@@ -62,7 +62,7 @@
 
   <script>
   window.productData = {
-    id: "smartwatch1",
+    id: "smartwatch",
     name: "Smart Watch",
     price: 120,
     image: "https://images.unsplash.com/photo-1637160151663-a410315e4e75?q=80&w=774&auto=format&fit=crop"
